fix cell phone size post thumbnail visibility

--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -23,7 +23,7 @@ section {
   width: 100%; 
   height: 100px;
   overflow: hidden;
-  margin-top: 60px;
+  margin: 60px 0 0 0;
 }
 .thumbs ul {
   margin: 0 auto;
@@ -41,6 +41,18 @@ section {
     -o-transition: opacity .5s ease-out;
     &:hover {
       opacity: 1.0;
+    }
+  }
+}
+@media only screen and (max-width:480px) {
+  .thumbs {
+    height: 65px;
+    margin: 40px 0 0 0;
+    ul {
+      text-align: left;
+      img {
+      height: 65px;
+      }
     }
   }
 }
